# async-to-clickhouse

./: Makefile  README.md  alembic.ini  dependency.py  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py  settings.py
app/infrastructure/database/: __init__.py  accessor.py  database.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  task.py
clickhouse-config/: config.xml
